[a11y] Touch exploration with TalkBack stops working in certain circumstances
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox-esr128 | --- | wontfix |
firefox132 | --- | wontfix |
firefox133 | --- | wontfix |
firefox134 | --- | fixed |
People
(Reporter: BlindMoon38, Assigned: eeejay)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Steps to reproduce
- Open Firefox with TalkBack enabled.
- Select Duck Duck Go as the search engine and search for something, for example, Mozilla.
- Explore the page with Touch exploration. Do not scroll the view. Notice that everything works normally.
- Scroll to the bottom of the page and try touch exploration again. Notice that TalkBack doesn't focus any element in the web view.
- Use TalkBack navigation gestures to explore the page. Notice that elements which aren't focusable with Touch exploration can be reached when using navigation gestures.
- Browse to any URL, for example, Wikipedia.
- Explore the page with Touch exploration. Notice how it works as expected.
- Zoom the page and try touch exploration again. Notice that TalkBack can't focus elements while zoomed in.
- Use navigation gestures to explore the page while still zoomed in. Notice how navigating with gestures is possible.
Expected behavior
In both 4 and 8 touch exploration doesn't work.
Actual behavior
Touch exploration should work always.
Device information
- Firefox version:Firefox Nightly 130.0a1 from2024-07-09T14:03:06.015268702.
- Android device model: Xiaomi Poco X6.
- Android OS version: HyperOS 1.0.6.0, Android 14.
Any additional information?
- TalkBack version 14.2.
Reporter | ||
Comment 1•8 months ago
|
||
I just realised that I wrote Actual behaviour and Expected behaviour in each other's places, sorry.
Reporter | ||
Comment 2•8 months ago
|
||
Just got the latest stable release, Firefox 128.0 is also affected.
Comment 3•7 months ago
|
||
The severity field is not set for this bug.
:royang, could you have a look please?
For more information, please visit BugBot documentation.
Comment 4•7 months ago
|
||
Description:
Please provide an explanation of the feature or change. Include a description of the user scenario in which it would be used and how the user would complete the task(s).
Screenshots and visual UI specs are welcome, but please include sufficient accompanying explanation so that blind members of the accessibility team are able to understand the feature/change.
How do we test this?
If there is an implementation to test, please provide instructions for testing it; e.g. setting preferences, other preparation, how to trigger the UI, etc.
When will this ship?
Tracking bug/issue:
Design documents (e.g. Product Requirements Document, UI spec):
Engineering lead:
Product manager:
The accessibility team has developed the Mozilla Accessibility Release Guidelines which outline what is needed to make user interfaces accessible:
https://wiki.mozilla.org/Accessibility/Guidelines
Please describe the accessibility guidelines you considered and what steps you've taken to address them:
Describe any areas of concern to which you want the accessibility team to give special attention:
Comment 5•4 months ago
|
||
Thanks for the report.
Eitan, are you aware of any hit testing issues specific to Android, particularly with regard to scrolling, zoom and/or APZ? Any ideas?
Assignee | ||
Comment 6•4 months ago
|
||
I can reproduce with Firefox. Interestingly the GeckoView sample browser works fine. This leads me to believe this is caused by how the browser view is embedded, or something in the vicinity. Will dig deeper.
Assignee | ||
Comment 7•4 months ago
|
||
Unfortunately the regression happened when we switched to CtW explore by touch. This doesn't explain why the GeckoView sample app works fine.. will keep digging.
Comment 8•4 months ago
|
||
Assigning to :eeejay for now (with apologies) so the bot doesn't nag me as the one who introduced the regression. 😳
Assignee | ||
Comment 9•4 months ago
|
||
(In reply to Diego Ramírez [:BlindMoon38] from comment #0)
- Browse to any URL, for example, Wikipedia.
- Explore the page with Touch exploration. Notice how it works as expected.
- Zoom the page and try touch exploration again. Notice that TalkBack can't focus elements while zoomed in.
- Use navigation gestures to explore the page while still zoomed in. Notice how navigating with gestures is possible.
I'm going to spin this into a new bug because it is a separate issue.
Assignee | ||
Comment 10•4 months ago
|
||
OK bug 1927237 tracks the explore by touch behavior after pinch zooming.
Assignee | ||
Comment 11•4 months ago
|
||
Comment 12•4 months ago
|
||
Comment 13•4 months ago
|
||
bugherder |
Comment 14•4 months ago
|
||
Set release status flags based on info from the regressing bug 1822004
Comment 15•4 months ago
|
||
The patch landed in nightly and beta is affected.
:eeejay, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox133
towontfix
.
For more information, please visit BugBot documentation.
Updated•4 months ago
|
Updated•4 months ago
|
Updated•4 months ago
|
Description
•