Bug 1907247 - Update non-doc body element bounds when they change. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D226971